--- a/HardwareStoreDemo/HardwareStore/Views/Sale/Details.cshtml
+++ b/HardwareStoreDemo/HardwareStore/Views/Sale/Details.cshtml
@@ -64,8 +64,8 @@
             </dd>
         </dl>
         <h4 class="text-center my-2">Detalle de Venta</h4>
-        <table class="w-100 table table-bordered table-striped">
-            <thead class="text-center">
+        <table class="w-100 table table-responsive table-bordered table-striped mt-2">
+            <thead class="text-center text-white bg-secondary">
                 <tr>
                     <th>Producto</th>
                     <th>Precio</th>
