--- a/HardwareStoreDemo/HardwareStore/Views/Client/Index.cshtml
+++ b/HardwareStoreDemo/HardwareStore/Views/Client/Index.cshtml
@@ -119,27 +119,27 @@
                         extend: 'csv',
                         className: 'bg-info border-0 text-white',
                         exportOptions: {
-                            columns: [1, 2, 3, 4, 5, 6, 7]
+                            columns: [1, 2, 3, 4, 5, 6]
                         }
                     },
                     {
                         extend: 'pdf',
                         className: 'bg-danger border-0 text-white',
                         exportOptions: {
-                            columns: [1, 2, 3, 4, 5, 6, 7]
+                            columns: [1, 2, 3, 4, 5, 6]
                         }
                     },
                     {
                         extend: 'excel',
                         className: 'bg-success border-0 text-white',
                         exportOptions: {
-                            columns: [1, 2, 3, 4, 5, 6, 7]
+                            columns: [1, 2, 3, 4, 5, 6]
                         }
                     }
                 ],
                 columnDefs: [
                     {
-                        target: 8,
+                        target: 7,
                         orderable: false,
                         searchable: false
                     }
