--- a/HardwareStoreDemo/HardwareStore/Views/Product/Create.cshtml
+++ b/HardwareStoreDemo/HardwareStore/Views/Product/Create.cshtml
@@ -8,9 +8,17 @@
 
 <section class="bg-white py-3 px-4 container rounded-2" style="max-width:800px;">
     <h4 class="pt-2">Ingrese los Datos del Producto</h4>
+
+    @if (TempData["message"] != null)
+    {
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            @TempData["message"]
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    }
     <hr />
     <div class="row px-md-3">
-        <div class="col-md-4">
+        <div class="col-md-12">
             <form asp-action="Create">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
@@ -21,7 +29,7 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="CategoryID" class="control-label"></label>
-                    <select asp-items="@ViewBag.Categories" asp-for="CategoryID" class="form-select">
+                    <select asp-items="@ViewBag.Categories" asp-for="CategoryID" class="form-select" id="categorySearch">
                         <option value="">Seleccione</option>
                     </select>
                     <span asp-validation-for="CategoryID" class="text-danger"></span>
@@ -29,7 +37,7 @@
 
                 <div class="form-group">
                     <label asp-for="SupplierID" class="control-label"></label>
-                    <select asp-items="@ViewBag.Suppliers" asp-for="SupplierID" class="form-select">
+                    <select asp-items="@ViewBag.Suppliers" asp-for="SupplierID" class="form-select" id="supplierSearch">
                         <option value="">Seleccione</option>
                     </select>
                     <span asp-validation-for="SupplierID" class="text-danger"></span>
@@ -47,7 +55,6 @@
                 </div>
                 <div class="form-group">
                     <button type="submit" class="btn btn-success">Guardar <i class="lni lni-save"></i></button>
-                    <br /><br />
                     <a class="btn btn-primary" asp-action="Index">Volver a la lista <i class="lni lni-arrow-left"></i></a>
                 </div>
             </form>
@@ -60,5 +67,19 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+    <script>
+        $(document).ready(function () {
+            $('#categorySearch').select2({
+                width: '100%',
+                placeholder: "Seleccione una Categoria ",
+            });
+
+            $('#supplierSearch').select2({
+                width: '100%',
+                placeholder: "Seleccione un Proveedor",
+            });
+        });
+    </script>
 }
 
