--- a/HardwareStoreDemo/HardwareStore/Views/Shared/Admin/AdminLayout.cshtml
+++ b/HardwareStoreDemo/HardwareStore/Views/Shared/Admin/AdminLayout.cshtml
@@ -82,6 +82,9 @@
     <script src="~/js/main.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
 
+    <!-- CHART JS -->
+    <script src="~/js/Chart.min.js"></script>
+
     <!-- SELECT 2 -->
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
