--- a/HardwareStoreDemo/HardwareStore/Views/Shared/Admin/AdminLayout.cshtml
+++ b/HardwareStoreDemo/HardwareStore/Views/Shared/Admin/AdminLayout.cshtml
@@ -82,6 +82,9 @@
     <script src="~/js/main.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
 
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+
     <!-- CHART JS -->
     <script src="~/js/Chart.min.js"></script>
 
